<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_mark_as_done">Mark as done</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_show_now">Show now</string>
    <string name="ad_mob_id_add">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_mob_id_add_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_mob_id_add_ini_simple">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_mob_id_add_ini_vid">ca-app-pub-3940256099942544/8691691433</string>
    <string name="ad_mob_id_did">7A733B5D64CE502DC060FC28660CECC4</string>
    <string name="ad_mob_id_init">ca-app-pub-3940256099942544~3347511713</string>
    <string name="add_card">Add a new debit or credit card to make purchases in this app.</string>
    <string name="add_reminder">Add reminder</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_address_line2">Address line 2</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_address_optional">Address (optional)</string>
    <string name="address_label_apt">Apt.</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_name_optional">Name (optional)</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic">State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_zip_code">ZIP code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="address_phone_number_required">Please enter your phone number</string>
    <string name="address_postal_code_invalid">Your postal code is invalid</string>
    <string name="address_postcode_invalid">Your postcode is invalid</string>
    <string name="address_province_required">Please enter your province</string>
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <string name="address_required">Please enter your address</string>
    <string name="address_shipping_address">Shipping Address</string>
    <string name="address_state_required">Please enter your state</string>
    <string name="address_zip_invalid">Your ZIP code is invalid.</string>
    <string name="address_zip_postal_invalid">Your ZIP/Postal code is invalid</string>
    <string name="amex_short">Amex</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">Healing Budz</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asset_statements">"[{
 \"relation\": [\"delegate_permission/common.handle_all_urls\"],
 \"target\": {
 \"namespace\": \"web\",
 \"site\": \"https://139.162.37.73\",
 }
}]"</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="can_not_play">can not play this video</string>
    <string name="card_number_hint">1234 1234 1234 1234</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkbox_LED">LED</string>
    <string name="checkbox_ongoing">Persistent</string>
    <string name="checkbox_sound">Sound</string>
    <string name="checkbox_vibrate">Vibrate</string>
    <string name="clear_all_label">clear_all</string>
    <string name="com.crashlytics.android.build_id">d97bf5b9-c20a-4b14-a8c2-a5ca4fc80b60</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="dialog_cancel_text">CANCEL</string>
    <string name="dialog_done_text">DONE</string>
    <string name="email"><u>cutlerfarms@gmail.com</u></string>
    <string name="facebook"><u>facebook.com/cutlerfarms</u></string>
    <string name="instagram"><u>intagram.com/cutlerfarms</u></string>
    <string name="intor_five_heading">"Individualized strain reviews,
 powered by you, not a laboratory…"</string>
    <string name="intor_five_msg">From Acapulco Gold to White Widow, find your strain in our database with our individualized strain reviews, rankings on aroma, taste, potency, genetics, and health benefits. Powered by you, not a laboratory, in a language you can understand without a botany degree. Share your prize worthy bud photos, best growing techniques, mood, sensation, and effects.</string>
    <string name="intor_five_title">Strain User Reviews</string>
    <string name="intor_one_heading">"Back in the day you got everything
 you needed to know about cannabis
 from your cousin Tommy."</string>
    <string name="intor_one_msg">"Today’s cannabis patients are part horticulturalist, part herbalist, and part chemist, but they are also passionate about sharing their knowledge. Our Budz are patients with stories to tell. The Healing Budz community connects you to decades of real life experience. Demystify cannabis and get all the answers you couldn't ask Tommy - privately and anonymously."</string>
    <string name="intor_one_title">Welcome to Healing Budz</string>
    <string name="intor_six_heading">"Find medical dispensaries,
 physicians, natural healers, smoke
 shops, glass artists, canna chefs…"</string>
    <string name="intor_six_title">Budz Adz</string>
    <string name="intor_three_heading">"Just like the old smoke circles
 around the bonfire…"</string>
    <string name="intor_three_msg">Community is at the core of cannabis culture and Healing Budz is passionate about creating connections. Join and create public or private groups to share healing stories, recipes and advice from patients and connoisseurs all around the globe.</string>
    <string name="intor_three_title">Groups</string>
    <string name="intor_xis_msg">Discover your local canna community. Be in the know about upcoming deals, promotions, fun industry events, and educational seminars in just a few taps.</string>
    <string name="list_empty">No items to display</string>
    <string name="select_all">select all</string>
    <string name="select_entry">Select Entries</string>
    <string name="twitter"><u>twitter.com./cutlerfarms</u></string>
    <string name="website"><u>www.cutlerfarms.com</u></string>
</resources>