<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/edit_diss_n" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="20.0sp"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.codingpixel.healingbudz.customeUI.HealingBudTextViewRegular android:textSize="@dimen/font_size_heading" android:textColor="#fff4c42f" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0sp" android:text="@string/select_entry" android:layout_marginStart="15.0sp" android:layout_marginEnd="15.0sp" />
    <android.support.v7.widget.SearchView android:id="@id/search_view_a" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:iconifiedByDefault="true" android:queryHint="Search" android:paddingStart="10.0sp" android:paddingEnd="20.0sp" android:backgroundTint="#fff4c42f" />
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="33.0sp" android:layout_marginTop="@dimen/searchview_margin" android:layout_marginBottom="@dimen/searchview_margin" android:layout_marginStart="20.0sp" android:layout_marginEnd="20.0sp">
        <RelativeLayout android:background="@drawable/qa_fragment_search_bg_white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="2.0sp" android:layout_marginBottom="2.0sp">
            <com.codingpixel.healingbudz.customeUI.HealinBudEditText android:textSize="16.0sp" android:textColor="#ffffffff" android:textColorHint="@color/white" android:gravity="center" android:id="@id/search_view" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="search" android:maxLines="1" android:lines="1" android:singleLine="true" android:inputType="textAutoComplete" android:imeOptions="actionDone" android:imeActionLabel="Search" />
            <ImageView android:id="@id/search_button" android:padding="7.0sp" android:layout_width="42.0sp" android:layout_height="fill_parent" android:src="@drawable/ic_qa_fragment_search" android:layout_alignParentRight="true" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/select_all_container" android:background="?android:selectableItemBackground" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/layout_margin" android:layout_marginStart="15.0sp" android:layout_marginEnd="15.0sp"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <android.support.v7.widget.AppCompatCheckBox android:layout_gravity="center_vertical" android:id="@id/select_all_checkbox" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:buttonTint="@color/colorAccent" />
        <TextView android:textSize="@dimen/font_size_subheading" android:layout_gravity="center_vertical" android:id="@id/select_all_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/textview_margin" android:text="@string/select_all" android:textAllCaps="true" android:layout_marginStart="@dimen/textview_margin" />
    </LinearLayout>
    <View android:background="@color/colorPrimary" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.100000024dip" android:layout_marginTop="@dimen/recyclerview_margin" android:layout_marginBottom="@dimen/searchview_margin" android:layout_marginStart="@dimen/line_margin" android:layout_marginEnd="@dimen/line_margin" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:layout_marginStart="20.0sp" android:layout_marginEnd="20.0sp">
        <view android:id="@id/recycler_view" android:layout_width="fill_parent" android:layout_height="fill_parent" class="com.codingpixel.healingbudz.customeUI.multiselect.RecyclerViewEmptySupport" />
        <com.codingpixel.healingbudz.customeUI.HealingBudTextViewRegular android:textSize="@dimen/font_size_normal" android:textColor="#fff4c42f" android:gravity="center" android:layout_gravity="center" android:id="@id/list_empty1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/list_empty" />
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0sp" android:layout_marginBottom="15.0sp" android:layout_marginStart="15.0sp" android:layout_marginEnd="15.0sp">
        <com.codingpixel.healingbudz.customeUI.HealingBudTextViewRegular android:textSize="@dimen/text_button_size" android:textColor="#fff4c42f" android:gravity="end" android:id="@id/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_cancel_text" android:layout_weight="1.0" />
        <com.codingpixel.healingbudz.customeUI.HealingBudTextViewRegular android:textSize="@dimen/text_button_size" android:textColor="#fff4c42f" android:gravity="end" android:id="@id/done" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dialog_done_text" android:layout_weight="0.2" />
    </LinearLayout>
</LinearLayout>