<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="10.0">
        <LinearLayout android:orientation="vertical" android:background="#ff93268f" android:layout_width="fill_parent" android:layout_height="0.0sp" android:weightSum="10.0" android:layout_weight="4.5">
            <com.codingpixel.healingbudz.customeUI.HealingBudTextView android:textSize="@dimen/intro_screen_title_font_size" android:textColor="@color/white" android:gravity="bottom|center" android:id="@id/textView" android:layout_width="fill_parent" android:layout_height="0.0sp" android:layout_marginBottom="5.0sp" android:text="@string/intor_six_title" android:layout_weight="2.0" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/icon" android:layout_width="fill_parent" android:layout_height="0.0sp" android:layout_marginTop="10.0sp" android:src="@drawable/ic_intro_six" android:layout_weight="8.0" />
        </LinearLayout>
        <ScrollView android:background="#ff721d6f" android:layout_width="fill_parent" android:layout_height="0.0sp" android:layout_weight="5.5">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#ff721d6f" android:paddingLeft="5.0sp" android:paddingTop="@dimen/intro_screen_heading_margin" android:paddingRight="5.0sp" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <com.codingpixel.healingbudz.customeUI.HealingBudTextView android:textSize="@dimen/intro_screen_heading_font_size" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/intor_six_heading" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
                <com.codingpixel.healingbudz.customeUI.HealingBudTextView android:textSize="@dimen/intro_screen_discription_font_size" android:textColor="#ffe6e6e6" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="18.0sp" android:layout_marginTop="@dimen/intro_screen_heading_to_description_margin" android:layout_marginRight="18.0sp" android:text="@string/intor_xis_msg" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
                <com.codingpixel.healingbudz.customeUI.HealingBudButtonBold android:textSize="17.0sp" android:textStyle="normal" android:textColor="@color/white" android:id="@id/get_start" android:background="@drawable/get_started_btn" android:layout_width="fill_parent" android:layout_height="52.0sp" android:layout_marginLeft="18.0sp" android:layout_marginTop="18.0sp" android:layout_marginRight="18.0sp" android:text="GET STARTED" android:lineSpacingExtra="2.0dip" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>